4/1/2021 update - some spacing fixed but links, icons and form have stopped functioning

--- a/css/about.css
+++ b/css/about.css
@@ -11,6 +11,6 @@
     font-size: 14pt;
 }
 
-
-    
-
+a:active {
+    background-color: lightgray;
+}
