--- a/css/header.css
+++ b/css/header.css
@@ -19,7 +19,7 @@
     color: whitesmoke;
     position: relative;
     z-index: 2;
-    margin-top: -80%;
+    margin-top: -70%;
     text-align: center;
     align-items: center;
 }
@@ -54,7 +54,8 @@ h6 {
 .text {
     text-align: center;
     color: whitesmoke;
-   
+    margin-left: -5%;
+    margin-bottom: 12%;
 }
 
 
